# PipelinesNodes

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  requirements.txt  run.py
api/api_handlers/: news.py
api/db/: get_collection.py
parser_producer/: Dockerfile  pyproject.toml  run.py
parser_producer/celery_config/: __init__.py  config.py  tasks.py
parser_producer/client/: main.py  module_func.py
parser_producer/core/: config.py  settings.py
parser_producer/parser/: main.py  parse_soup_data.py  payload_creator.py  records_creator.py  records_factory.py  soup_response.py
parser_producer/producer/: main.py  writer.py
parser_producer/scraper/: processing_soup_data.py  records_creator.py  records_factory.py
reader_consumer/: Dockerfile  pyproject.toml  run.py
reader_consumer/client/: module_func.py  utils.py
reader_consumer/consumer/: reader.py
reader_consumer/core/: settings.py
reader_consumer/db/: create.py  setup_db.py
scraper_producer/: Dockerfile  run.py
scraper_producer/client/: module_func.py
scraper_producer/core/: settings.py
scraper_producer/scraper/: processing_soup_data.py  records_creator.py
web_src/: Dockerfile  pyproject.toml  run.py
web_src/api_handlers/: news.py
web_src/core/: settings.py
web_src/db/: get_collection.py
