[tool.poetry]
name = "pipelinenodes"
version = "0.1.0"
description = ""
authors = ["aleksej <xfrbt1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.0"

httpx = "^0.26.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
black = "^24.1.1"

pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"

requests = "^2.31.0"
redis = "^5.0.1"
celery = "^5.3.6"
kafka-python = "^2.0.2"
pymongo = "^4.6.1"
starlette = "^0.37.1"
motor = "^3.3.2"
uvicorn = "^0.27.1"

httpx = "^0.26.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
black = "^24.1.1"

pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"

requests = "^2.31.0"
redis = "^5.0.1"
celery = "^5.3.6"
kafka-python = "^2.0.2"
pymongo = "^4.6.1"
starlette = "^0.37.1"
motor = "^3.3.2"
uvicorn = "^0.27.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
